# tsp-output/@typespec/openapi3/openapi.v2.json
@@ -1348,6 +1348,16 @@
               }
             }
           },
+          "409": {
+            "description": "The request conflicts with the current state of the server.",
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ConflictError"
+                }
+              }
+            }
+          },
           "429": {
             "description": "Client error",
             "content": {
@@ -1386,6 +1396,26 @@
         }
       },
       "BadRequestError": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "status": {
+            "type": "integer"
+          },
+          "detail": {
+            "type": "string"
+          },
+          "instance": {
+            "type": "string"
+          }
+        }
+      },
+      "ConflictError": {
         "type": "object",
         "properties": {
           "type": {
